# backups.rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: changelog.yaml  cross-build.yaml  health.yaml  lint.yaml  release-packaging.yaml  scorecard.yaml  security.yaml  test-with-coverage.yaml
scripts/: Taskfile.dist.yaml  dist.just
src/: cli.rs  config.rs  main.rs  mount.rs  runner.rs  ui.rs
src/commands/: init.rs  mod.rs  run.rs
src/commands/snapshots/: backup__commands__init__snapshot_tests__snapshot_template_path_with_spaces.snap  backup__commands__init__snapshot_tests__snapshot_template_root_fallback.snap  backup__commands__init__snapshot_tests__snapshot_template_typical.snap  backup__commands__run__tests__snapshot_backup_args_default.snap  backup__commands__run__tests__snapshot_backup_args_empty_sources.snap  backup__commands__run__tests__snapshot_backup_args_multiple_sources.snap  backup__commands__run__tests__snapshot_backup_args_sudo.snap  backup__commands__run__tests__snapshot_mount_args.snap  backup_rs__commands__init__snapshot_tests__snapshot_template_path_with_spaces.snap  backup_rs__commands__init__snapshot_tests__snapshot_template_root_fallback.snap  backup_rs__commands__init__snapshot_tests__snapshot_template_typical.snap  (+10 more)
src/snapshots/: backup__runner__tests__snapshot_prefix_with_sudo.snap  backup__runner__tests__snapshot_rustic_base_no_sudo.snap  backup__runner__tests__snapshot_rustic_base_with_sudo.snap  backup_rs__mount__tests__snapshot_nfs_sources.snap  backup_rs__runner__tests__snapshot_prefix_no_sudo.snap
tests/: e2e.rs  integration.rs
